--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
   <title>AngularJmv</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/logo.ico">
+  <script
+      src="https://kit.fontawesome.com/417f41f80a.js"
+      crossorigin="anonymous"
+    ></script>
 </head>
 <body>
   <app-root></app-root>
